feature(rate-limiting): implemented rate limiting